@startuml
'https://plantuml.com/class-diagram

package evolution {
    class Evolution {
        + Evolution( UReproductionScheme reproduction_scheme, UMutationScheme mutation_scheme,
                       USuccessionScheme succession_scheme, UCrossoverScheme crossover_scheme )
        + Population evolve( const Population& population, const std::vector<float>& fitness )

        - UReproductionScheme reproduction_scheme_
        - UMutationScheme mutation_scheme_
        - USuccessionScheme succession_scheme_
        - UCrossoverScheme crossover_scheme_
    }

    class Specimen {
        + {static} Population createRandomPopulation( int population_size, std::mt19937 random_generator )
        + Specimen( const CarDescription& car_description )
        + bool operator==( const Specimen& rhs ) const
        + std::vector<float> attributes() const
        + CarDescription carDescription() const
        + std::vector<float>& attributesRef()
        + void clampAttributes()
        - std::vector<float> attributes_
    }

    Evolution *-- mutation.MutationScheme
    Evolution *-- reproduction.ReproductionScheme
    Evolution *-- succession.SuccessionScheme
    Evolution *-- crossover.CrossoverScheme
}
@enduml